The inital conversion function, and inital html connect

--- a/ticket1.html
+++ b/ticket1.html
@@ -6,5 +6,17 @@
     <title>Ticket 1</title>
     <script src="ticket1.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Travel Tool</h1>
+     <p> Create a travel tool to help their clients.
+      They have grand plans, from allowing hotel and travel booking through to real-time translation.
+      Having surveyed their customers, here were the results of the question
+      "What is you biggest problem that we could help you with?"</p>
+      <p>1.80% said understanding what their spending budget in £ is worth in €</p>
+       <form>
+          <label for="euroMachine">Please put in your pounds and we will convert it for you:</label>
+            <input id="euroMachine" type= "number" placeholder="Enter Pounds">
+              <button type="submit">Submit to Convert</button><!--The onclick triggers the "poundsToEuros" function when clicked-->
+        </form>
+  </body>
 </html>
