--- a/ticket1.html
+++ b/ticket1.html
@@ -6,5 +6,15 @@
     <title>Ticket 1</title>
     <script src="ticket1.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Pounds to Euros</h1>
+    <div>
+      <p> Enter a number of Pounds to be converted into Euros</p>
+      <form>
+        <input type="number" name="Pounds" id="Pounds">Pounds</input>
+      </form>
+        <input type="submit">
+      </form>
+    </div>
+  </body>
 </html>
